# my_mcap_demo

./: .gitignore  pixi.toml  students.mcap
cmake/: Findlz4.cmake
proto/: imu.proto  student.proto
reader/: CMakeLists.txt  main.cpp
writer/: CMakeLists.txt  main.cpp
